Improve backup/restore flow, error handling, and debug reset tooling